examples/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: limascope-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: limascope.k3d.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: limascope-service
                port:
                  number: 8080
